--- a/calendrier.html
+++ b/calendrier.html
@@ -2,11 +2,11 @@
 	<title>calendrier</title>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
-	<script type='text/javascript' src='../../site-dp/library-js/util.js'></script>
-	<script type='text/javascript' src='../../site-dp/library-js/text.js'></script>
+	<script type='text/javascript' src='../site-dp/library-js/util.js'></script>
+	<script type='text/javascript' src='../site-dp/library-js/text.js'></script>
 	<script type='text/javascript' src='calendar.js'></script>
-	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/structure.css'/>
-	<link rel='stylesheet' type='text/css' href='../../site-dp/library-css/perso.css'/>
+	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/perso.css'/>
 <style type='text/css'>
 	a { display: block; }
 </style></head><body>
