--- a/braille.html
+++ b/braille.html
@@ -34,7 +34,17 @@
 		flex-direction: row;
 		flex-wrap: nowrap;
 	}
+	section#drag-drop p {
+		border: solid 2px var(--bord-color);
+		padding: 0.5em;
+		width: 8em;
+		height: 3em;
+	}
 </style></head><body>
+	<section id='drag-drop'>
+		<p>a</p><p>b</p><p>c</p><p>d</p><p>e</p><p>f</p><p>g</p><p>h</p><p>i</p><p>j</p><p>k</p><p>l</p><p>m</p>
+		<p>n</p><p>o</p><p>p</p><p>q</p><p>r</p><p>s</p><p>t</p><p>u</p><p>v</p><p>w</p><p>x</p><p>y</p><p>z</p>
+	</section>
 	<section id='mot'>
 		<h2>entrez une phrase</h2>
 		<div id='input'><input type='text'><button onclick='writeBraille()'>validez</button></div>
