--- a/contacts.html
+++ b/contacts.html
@@ -3,12 +3,12 @@
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
 	<base target='_blank'>
-	<link rel='icon' type='image/svg+xml' href='/var/www/html/site-dp/data/nounours-perso.svg'/>
-	<link rel='stylesheet' type='text/css' href='/var/www/html/site-dp/library-css/structure.css'/>
-	<link rel='stylesheet' type='text/css' href='/var/www/html/site-dp/library-css/perso.css' media='screen'/>
-	<script type='text/javascript' src='/var/www/html/site-dp/library-js/text.js'></script>
-	<script type='text/javascript' src='/var/www/html/site-dp/library-js/list.js'></script>
-	<script type='text/javascript' src='/var/www/html/site-dp/library-js/file.js'></script>
+	<link rel='icon' type='image/svg+xml' href='../site-dp/data/nounours-perso.svg'/>
+	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/structure.css'/>
+	<link rel='stylesheet' type='text/css' href='../site-dp/library-css/perso.css' media='screen'/>
+	<script type='text/javascript' src='../site-dp/library-js/text.js'></script>
+	<script type='text/javascript' src='../site-dp/library-js/list.js'></script>
+	<script type='text/javascript' src='../site-dp/library-js/file.js'></script>
 	<script type='text/javascript' src='contacts.js'></script>
 <style type='text/css'>
 	section#liste {
