--- a/debbyPlay.html
+++ b/debbyPlay.html
@@ -2,15 +2,14 @@
 	<title>framework</title>
 	<meta name='viewport' content='width=device-width,initial-scale=1'/>
 	<meta charset='utf-8'/>
-	<base target='blank' href='site-dp/'/>
+	<base target='blank' href='../site-dp/'/>
 	<link rel='icon' type='image/svg+xml' href='data/nounours-perso.svg'/>
 	<link rel='stylesheet' type='text/css' href='library-css/structure.css'/>
 	<link rel='stylesheet' type='text/css' href='library-css/perso.css' media='screen'/>
 	<script type='text/javascript' src='library-js/text.js'></script>
-	<script type='text/javascript' src='../debbyPlay.js'></script>
+	<script type='text/javascript' src='../html/debbyPlay.js'></script>
 	<style type='text/css'></style>
 </head><body>
-	bonjour
 	<h1>debby play</h1>
 	<p>énième version de ma copie d'angular js</p>
 	<p>mon message: ((message))...</p>
@@ -21,6 +20,8 @@
 	<p>une entrée de dictionnaire: ((dico.b))</p>
 	<p>une entrée de dictionnaire: ((dico.c))</p>
 	<p>une entrée de dictionnaire imbriquée: ((dico.c.d))</p>
+	<p>deuxième occurence de mon message: ((message))...</p>
+	<p>deuxième affichage de ma liste: ((liste))</p>
 </body><script type='text/javascript'>
 	// les données
 	var message = 'coucou, je suis un simple message';
