--- a/debbyPlay.html
+++ b/debbyPlay.html
@@ -15,8 +15,8 @@
 	<h2>les conditions</h2>
 	<p if='condiTrue'>coucou</p>
 	<p if='condiFalse'>loulou</p>
-	<p if='"1" == "2"'>doudou</p>
-	<p if='1 == 1'>toutou</p>
+	<p if='3 === 2'>doudou</p>
+	<p if='1 === 1'>toutou</p>
 	<h2>afficher des variables</h2>
 	<p>mon message: ((message))...</p>
 	<p>une liste: ((liste))</p>
