--- a/debbyPlay.html
+++ b/debbyPlay.html
@@ -8,9 +8,10 @@
 	<link rel='stylesheet' type='text/css' href='library-css/perso.css' media='screen'/>
 	<script type='text/javascript' src='library-js/text.js'></script>
 	<script type='text/javascript' src='../html/debbyPlay.js'></script>
-	<style type='text/css'></style>
-</head><body>
+<style type='text/css'>
+</style></head><body>
 	<h1>debby play</h1>
+	coucou (( message ))
 	<p>énième version de ma copie d'angular js</p>
 	<h2>les conditions</h2>
 	<p if='condiTrue'>coucou</p>
