--- a/contacts/detail.html
+++ b/contacts/detail.html
@@ -17,6 +17,7 @@
 	<p>métier: $job</p>
 	<p>téléphones: $numeros</p>
 	<p>courriels: $courriels</p>
+	<p>adresse: $adresse</p>
 	<p>couleurs préférées: $couleurs</p>
 	<p>aime: $aime</p>
 	<p>déteste: $deteste</p>
