--- a/debbyPlay.html
+++ b/debbyPlay.html
@@ -13,6 +13,23 @@
 	<h1>debby play</h1>
 	coucou (( message ))
 	<p>énième version de ma copie d'angular js</p>
+	<h2>les inputs</h2>
+	<input type='text' name='paramUtilisateur'>
+	<input type='text' name='paUtiliteur'>
+	<input type='text' name='dico.b'>
+	<input type='text' name='dico.c.d'>
+	<textarea name='textUtilisateur'></textarea>
+	<p>valeur du bouton radio: (( radio ))</p>
+	<table>
+		<tr><td><input type='checkbox' name='checkBox'></td><td>pomme</td></tr>
+		<tr><td><input type='checkbox' name='checkBox'></td><td>banane</td></tr>
+		<tr><td><input type='checkbox' name='checkBox'></td><td>framboise</td></tr>
+	</table>
+		<table>
+		<tr><td><input type='radio' name='radio' value='oui'></td><td>oui</td></tr>
+		<tr><td><input type='radio' name='radio' value='non'></td><td>non</td></tr>
+		<tr><td><input type='radio' name='radio' value='peut-être'></td><td>peut-être</td></tr>
+	</table>
 	<h2>les conditions</h2>
 	<p if='condiTrue'>coucou</p>
 	<p if='condiFalse'>loulou</p>
@@ -29,12 +46,6 @@
 	<p>une entrée de dictionnaire imbriquée: ((dico.c.d))</p>
 	<p>deuxième occurence de mon message: ((message))...</p>
 	<p>deuxième affichage de ma liste: ((liste))</p>
-	<h2>les inputs</h2>
-	<input type='text' name='paramUtilisateur'>
-	<input type='text' name='paUtiliteur'>
-	<input type='text' name='dico.b'>
-	<input type='text' name='dico.c.d'>
-	<textarea name='textUtilisateur'></textarea>
 </body><script type='text/javascript'>
 	// les données
 	var message = 'coucou, je suis un simple message';
@@ -46,6 +57,8 @@
 	var textUtilisateur = 'texte sur plusieurs lignes';
 	var condiTrue = true;
 	var condiFalse = false;
+	var checkBox = 'checkbox';
+	var radio = 'peut-être';
 	// l'affichage
 	dpInit();
 </script></html>
