--- a/debbyPlay.html
+++ b/debbyPlay.html
@@ -7,12 +7,16 @@
 	<link rel='stylesheet' type='text/css' href='library-css/structure.css'/>
 	<link rel='stylesheet' type='text/css' href='library-css/perso.css' media='screen'/>
 	<script type='text/javascript' src='library-js/text.js'></script>
-	<script type='text/javascript' src='../html/debbyPlay.js'></script>
+	<script type='text/javascript' src='library-js/dynaPlay.js'></script>
+	<script type='text/javascript' src='library-js/util.js'></script>
+	<script type='text/javascript' src='library-js/selector.js'></script>
+	<!-- script type='text/javascript' src='../html/dynaPlay.js'></script -->
 <style type='text/css'>
 </style></head><body>
 	<h1>debby play</h1>
 	coucou (( message ))
 	<p>énième version de ma copie d'angular js</p>
+	<select-db callback='myFunc' list='myList'></select-db>
 	<h2>les inputs</h2>
 	<input type='text' name='paramUtilisateur'>
 	<input type='text' name='paUtiliteur'>
@@ -60,6 +64,8 @@
 	var condiFalse = false;
 	var checkBox =[ 'pomme', ];
 	var radio = 'peut-être';
+	var myList =[ 'a', 'b', 'c'];
+	function myFunc (name){ console.log ('coucou', name); }
 	// l'affichage
 	dpInit();
 </script></html>
