--- a/debbyPlay.html
+++ b/debbyPlay.html
@@ -9,14 +9,26 @@
 	<script type='text/javascript' src='library-js/text.js'></script>
 	<script type='text/javascript' src='library-js/dynaPlay.js'></script>
 	<script type='text/javascript' src='library-js/util.js'></script>
-	<script type='text/javascript' src='library-js/selector.js'></script>
-	<!-- script type='text/javascript' src='../html/dynaPlay.js'></script -->
+	<script type='text/javascript' src='../html/dynaPlay-selector.js'></script>
 <style type='text/css'>
+	div.selector {
+		border-style: solid;
+		border-width: 4px;
+		padding: 0;
+	}
+	div.selector * { margin: 0; }
+	div.selector p { display: none; }
+	div.selector:hover p { display: block; }
+	div.selector h2 {
+		background-color: var(--bord-color);
+		color: var(--page-color);
+	}
 </style></head><body>
 	<h1>debby play</h1>
 	coucou (( message ))
 	<p>énième version de ma copie d'angular js</p>
-	<select-db callback='myFunc' list='myList'></select-db>
+	<dp-selector list='selecteur' choice='choix'></dp-selector>
+	<p>option choisie: (( choix ))</p>
 	<h2>les inputs</h2>
 	<input type='text' name='paramUtilisateur'>
 	<input type='text' name='paUtiliteur'>
@@ -64,7 +76,8 @@
 	var condiFalse = false;
 	var checkBox =[ 'pomme', ];
 	var radio = 'peut-être';
-	var myList =[ 'a', 'b', 'c'];
+	var selecteur =[ 'a', 'b', 'c'];
+	var choix = 'a';
 	function myFunc (name){ console.log ('coucou', name); }
 	// l'affichage
 	dpInit();
