--- a/dynaPlay.html
+++ b/dynaPlay.html
@@ -6,24 +6,10 @@
 	<link rel='icon' type='image/svg+xml' href='data/nounours-perso.svg'/>
 	<link rel='stylesheet' type='text/css' href='library-css/structure.css'/>
 	<link rel='stylesheet' type='text/css' href='library-css/perso.css' media='screen'/>
+	<link rel='stylesheet' type='text/css' href='library-css/dynaPlay.css'/>
 	<script type='text/javascript' src='library-js/text.js'></script>
 	<script type='text/javascript' src='library-js/dynaPlay.js'></script>
-<style type='text/css'>
-	selector {
-		display: block;
-		border-style: solid;
-		border-width: 4px;
-		padding: 0;
-	}
-	selector * { margin: 0; }
-	selector p { display: none; }
-	selector:hover p { display: block; }
-	selector p:hover { background-color: var(--fond-color, #EEE); }
-	selector h3 {
-		background-color: var(--bord-color);
-		color: var(--page-color);
-	}
-</style></head><body>
+<style type='text/css'></style></head><body>
 	<h1>debby play</h1>
 	coucou (( message ))
 	<p>énième version de ma copie d'angular js</p>
@@ -66,6 +52,8 @@
 	<p>une entrée de dictionnaire imbriquée: ((dico.c.d))</p>
 	<p>deuxième occurence de mon message: ((message))...</p>
 	<p>deuxième affichage de ma liste: ((liste))</p>
+	<p>une liste de dictionnaire:</p>
+	<p for='dicoList'>(( firstname )) (( lastname )): (( age )) ans</p>
 </body><script type='text/javascript'>
 	// les données
 	var message = 'coucou, je suis un simple message';
@@ -81,6 +69,10 @@
 	var radio = 'peut-être';
 	var selecteur =[ 'a', 'b', 'c'];
 	var choix = 'a';
+	var dicoList =[
+		{ firstname: 'deborah', lastname: 'powers', age: '33' },
+		{ firstname: 'hakima', lastname: 'touil', age: '45' }
+	];
 	// l'affichage
 	dpInit();
 </script></html>
