--- a/dynaPlay.html
+++ b/dynaPlay.html
@@ -45,8 +45,9 @@
 	<p>mon message: ((message))...</p>
 	<p>une liste: ((liste))</p>
 	<p>une liste imbriquée:<span> ((listeImbriquee)),</span></p>
-	<p>une liste imbriquée:<span><i> ((listeImbriqueeBis)),</i>;</span></p>
+	<p>une seconde liste imbriquée:<span><i> ((listeImbriqueeBis)),</i>;</span></p>
 	<p>un dictionnaire: ((dico))</p>
+	<p for='dico'>lettres: (( a )), (( b )), (( c ))</p>
 	<p>une entrée de dictionnaire: ((dico.b))</p>
 	<p>une entrée de dictionnaire: ((dico.c))</p>
 	<p>une entrée de dictionnaire imbriquée: ((dico.c.d))</p>
