--- a/dynaPlay.html
+++ b/dynaPlay.html
@@ -47,7 +47,7 @@
 	<p>une liste imbriquée:<span> ((listeImbriquee)),</span></p>
 	<p>une seconde liste imbriquée:<span><i> ((listeImbriqueeBis)),</i>;</span></p>
 	<p>un dictionnaire: ((dico))</p>
-	<p for='dico'>lettres: (( a )), (( b )), (( c ))</p>
+	<p for='dico2'>lettres: (( a )), (( b )), (( c ))</p>
 	<p>une entrée de dictionnaire: ((dico.b))</p>
 	<p>une entrée de dictionnaire: ((dico.c))</p>
 	<p>une entrée de dictionnaire imbriquée: ((dico.c.d))</p>
@@ -62,6 +62,7 @@
 	var listeImbriquee =[ [4,5,6], [7,8,9] ];
 	var listeImbriqueeBis =[[ [10,11,12], [13,14,15] ], [ [16,17,18], [19,20,21] ]]
 	var dico ={ a: 'lettre a', b: 'lettre b', c: { d: 'lettres c et d' }};
+	var dico2 ={ a: 'lettre a', b: 'lettre b', c: { d: 'lettres c et d' }};
 	var paramUtilisateur = 'champ de texte';
 	var textUtilisateur = 'texte sur plusieurs lignes';
 	var condiTrue = true;
